manifests/seraphim/prod/gitlab/HTTPRoute-gitlab-registry.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations: {}
  labels:
    app: registry
    chart: registry-0.7.0
    heritage: Helm
    release: gitlab
  name: gitlab-registry
  namespace: gitlab
spec:
  hostnames:
    - registry.example.com
  parentRefs:
    - name: gitlab-gw
      sectionName: registry-web
  rules:
    - backendRefs:
        - kind: Service
          name: gitlab-registry
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 900s
        request: 900s
